# Mp3Encoder

./: settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenSLAudioPlay.cpp  PlayCallback.cpp  gles_play.cpp  mp3_encoder.cpp  native-lib.cpp  video_play.cpp
app/src/main/cpp/gles/: PlayCallback.h  gles_play.h  video_play.h
app/src/main/cpp/include/: mp3_encoder.h
app/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.h
app/src/main/java/com/phuket/tour/studio/: MainActivity.java  Mp3Encoder.java
app/src/main/java/com/phuket/tour/studio/audio/: AudioTrackManager.java  MyAudioRecord.java
app/src/main/java/com/phuket/tour/studio/video/: SimpleRenderer.java  VideoPlayActivity.java  YUVPlay.java
app/src/main/res/layout/: activity_main.xml  activity_video_play.xml
gradle/wrapper/: gradle-wrapper.properties
